<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent">
      <LinearLayout android:id="@+id/linearLayout1" android:layout_width="fill_parent" android:orientation="horizontal" android:layout_height="150dip">
        <LinearLayout android:id="@+id/linearLayout4" android:layout_height="wrap_content" android:layout_width="150dip" android:orientation="vertical">
            <ImageView android:layout_height="wrap_content" android:id="@+id/imageView1" android:layout_width="150dip" android:layout_weight="1" android:src="@drawable/piratas"></ImageView>
        </LinearLayout>
        <ScrollView android:layout_height="wrap_content" android:id="@+id/scrollView1" android:layout_width="fill_parent" android:layout_weight="1" android:visibility="visible">
            <LinearLayout android:id="@+id/linearLayout5" android:layout_height="fill_parent" android:layout_width="fill_parent" android:orientation="vertical">
                <LinearLayout android:id="@+id/linearLayout6" android:layout_height="wrap_content" android:layout_width="fill_parent" android:orientation="vertical">
                    <TextView android:id="@+id/detalhesNome" android:layout_height="wrap_content" android:layout_width="fill_parent" android:text="@string/detalhesNomeFilme"></TextView>
                </LinearLayout>
                <LinearLayout android:id="@+id/linearLayout7" android:layout_height="wrap_content" android:layout_width="fill_parent" android:orientation="vertical">
                    <TextView android:id="@+id/detalhesDirecao" android:layout_height="wrap_content" android:layout_width="fill_parent" android:text="@string/detalhesDiretores"></TextView>
                </LinearLayout>
                <LinearLayout android:id="@+id/linearLayout10" android:layout_height="wrap_content" android:layout_width="fill_parent" android:orientation="vertical">
                    <TextView android:id="@+id/detalhesAtores" android:layout_height="wrap_content" android:layout_width="fill_parent" android:text="@string/detalhesStringAutores"></TextView>
                </LinearLayout>
                <LinearLayout android:id="@+id/linearLayout8" android:layout_height="wrap_content" android:layout_width="fill_parent" android:orientation="vertical">
                    <TextView android:id="@+id/detalhesDuracao" android:layout_height="wrap_content" android:layout_width="fill_parent" android:text="@string/detalhesDuracao"></TextView>
                </LinearLayout>
                <LinearLayout android:id="@+id/linearLayout9" android:layout_height="wrap_content" android:layout_width="fill_parent" android:orientation="vertical">
                    <TextView android:id="@+id/detalhesGenero" android:layout_height="wrap_content" android:layout_width="fill_parent" android:text="@string/detalhesGenero"></TextView>
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
    <ScrollView android:id="@+id/scrollView2" android:layout_width="fill_parent" android:layout_weight="1" android:layout_height="150dip">
        <LinearLayout android:id="@+id/linearLayout2" android:layout_height="wrap_content" android:layout_width="fill_parent" android:orientation="vertical">
            <TextView android:id="@+id/textView6" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/detalhesSinopse"></TextView>
            <TextView android:id="@+id/textView1" android:layout_height="wrap_content" android:layout_width="fill_parent" android:text="@string/detalhesHorarios"></TextView>
        </LinearLayout>
    </ScrollView>
    <LinearLayout android:id="@+id/linearLayout3" android:layout_width="fill_parent" android:orientation="horizontal" android:layout_height="wrap_content" android:layout_gravity="right" android:layout_weight="1">
        <LinearLayout android:id="@+id/linearLayout10" android:layout_height="fill_parent" android:layout_width="wrap_content" android:orientation="horizontal" android:layout_gravity="right" android:layout_weight="1">
            <Button android:id="@+id/Button01" android:layout_gravity="right" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/botaoArmazenarBusca"></Button>
            <Button android:id="@+id/button2" android:layout_gravity="right" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/botaoCriarCompromisso"></Button>
            <Button android:id="@+id/button1" android:layout_gravity="right" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/botaoIrMaps"></Button>
        </LinearLayout>
    </LinearLayout>    
</LinearLayout>
