<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent" android:orientation="vertical">
    <TextView android:id="@+id/textView1" android:layout_height="wrap_content" android:textAppearance="?android:attr/textAppearanceMedium" android:text="@string/labelPesquisa" android:layout_width="fill_parent" android:layout_weight="1"></TextView>
    <EditText android:id="@+id/editText1" android:layout_width="fill_parent" android:layout_weight="2" android:layout_height="50dip" android:maxHeight="50dip">
        <requestFocus></requestFocus>
    </EditText>
    <TextView android:id="@+id/textView2" android:layout_height="wrap_content" android:layout_weight="1" android:text="@string/labelCidade" android:layout_width="fill_parent"></TextView>
    <Spinner android:layout_width="fill_parent" android:layout_height="wrap_content" android:id="@+id/spinner1" android:layout_weight="0.5"></Spinner>
    <TextView android:id="@+id/textView3" android:layout_height="wrap_content" android:layout_weight="1" android:text="@string/labelGenero" android:layout_width="fill_parent"></TextView>
    <Spinner android:layout_width="fill_parent" android:layout_height="wrap_content" android:id="@+id/spinner2" android:layout_weight="0.5"></Spinner>
    <TextView android:id="@+id/textView4" android:layout_height="wrap_content" android:layout_weight="1" android:text="@string/labelFaixaHoraria" android:layout_width="fill_parent"></TextView>
    <Spinner android:layout_width="fill_parent" android:layout_height="wrap_content" android:id="@+id/spinner3" android:layout_weight="0.5"></Spinner>
    <LinearLayout android:id="@+id/linearLayout1" android:orientation="horizontal" android:layout_gravity="right" android:layout_weight="2" android:layout_width="fill_parent" android:layout_height="50dip">
        <Button android:layout_height="wrap_content" android:id="@+id/botaoPesquisar" android:layout_gravity="right" android:text="@string/labelBotaoPesquisar" android:layout_width="fill_parent" android:layout_marginLeft="10dip" android:layout_marginRight="10dip" android:layout_marginTop="15dip" android:layout_marginBottom="10dip"></Button>
    </LinearLayout>
    
</LinearLayout>
